<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 DVDAndroid
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Enable Ambient Display - Xposed</string>
    <string name="xposed_descr">Easy Xposed module for Lollipop which add Ambient Display</string>

    <string name="doze_pulse_duration_in">How long does it take to fade in?</string>
    <string name="doze_pulse_duration_visible">Once faded in, how long does it stay visible?</string>
    <string name="doze_pulse_duration_out">How long does it take to fade out?</string>
    <string name="warning_battery">A higher value of brightness causes a higher use of battery</string>
    <string name="warning_visibility">A lower value of opacity obscures the icon</string>
    <string name="doze_small_icon_alpha">Alpha to apply to small icons when dozing</string>
    <string name="config_screenBrightnessDoze">Screen brightness used to dim the screen while dozing.</string>
    <string name="doze_pulse_schedule_resets">Maximum number of times the notification pulse schedule can be reset</string>
    <string name="hot_reboot">Hot reboot</string>
    <string name="reboot">Reboot</string>
    <string name="time_settings">Time settings</string>
    <string name="reboot_required">Reboot required</string>
    <string name="customizations">Customizations</string>
    <string name="notes">Notes</string>
    <string name="testIt">Test it</string>
    <string name="module_not_enabled">Module not enabled</string>
    <string name="doze_proximity">Activate doze with proximity sensor</string>
    <string name="doze_not_pulse">Doze with proximity sensor is disabled</string>
    <string name="doze_will_pulse">Doze with proximity sensor is enabled</string>
    <string name="start_service">Start service</string>
    <string name="service_started">Service started</string>
    <string name="info">Info</string>
    <string name="aosp">This module works on Google stock/AOSP based roms.\nIf you have got a Samsung or a LG device, try this module; if it works OK, if it doesn\'t I can\'t do anything</string>
    <string name="def">Default</string>
    <string name="about">Module created by <a href="http://github.com/dvdandroid">dvdandroid</a>\n\nSource code available at <a href="http://github.com/dvdandroid/Xposed-EnableAmbientDisplay">GitHub</a></string>
    <string name="service_stopped">Service stopped</string>
    <string name="stop_service">Stop service</string>
    <string name="doze_power_key">Doze on power key click</string>
    <string name="doze_on_power_key">Instead of wake up device, it will appear Ambient Display</string>
    <string name="doze_no_power_key">Device will wake up normally</string>
    <string name="doze_pulse_schedule">When to pulse after a buzzworthy notification arrives</string>
    <string name="extra">Extras</string>
    <string name="caution">Caution!</string>
    <string name="caution_power_key">The device can not turn over if something goes wrong. To avoid this, set another method that makes the device awake (waking up with the volume keys for example).\n\nIf no precautions are made and something goes wrong, you have to disable or uninstall Xposed.</string>

</resources>
