<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 DVDAndroid
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="not_enabled"
        android:title="@string/module_not_enabled"/>

    <PreferenceCategory android:title="@string/time_settings">

        <com.dvd.android.xposed.enableambientdisplay.utils.SeekBarDialogPreference
            android:defaultValue="1000"
            android:key="doze.pulse.duration.in"
            android:max="5000"
            android:title="@string/doze_pulse_duration_in"
            app:min="0"
            app:progressTextSuffix="ms"/>

        <com.dvd.android.xposed.enableambientdisplay.utils.SeekBarDialogPreference
            android:defaultValue="3000"
            android:key="doze.pulse.duration.visible"
            android:max="5000"
            android:title="@string/doze_pulse_duration_visible"
            app:min="0"
            app:progressTextSuffix="ms"/>

        <com.dvd.android.xposed.enableambientdisplay.utils.SeekBarDialogPreference
            android:defaultValue="1000"
            android:key="doze.pulse.duration.out"
            android:max="5000"
            android:title="@string/doze_pulse_duration_out"
            app:min="0"
            app:progressTextSuffix="ms"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/customizations">

        <com.dvd.android.xposed.enableambientdisplay.utils.SeekBarDialogPreference
            android:defaultValue="17"
            android:key="config_screenBrightnessDoze"
            android:max="100"
            android:title="@string/config_screenBrightnessDoze"
            app:min="0"
            app:progressTextSuffix="%"/>

        <com.dvd.android.xposed.enableambientdisplay.utils.SeekBarDialogPreference
            android:defaultValue="1"
            android:key="doze.pulse.schedule.resets"
            android:max="5"
            android:title="@string/doze_pulse_schedule_resets"
            app:min="1"/>

        <com.dvd.android.xposed.enableambientdisplay.utils.SeekBarDialogPreference
            android:defaultValue="222"
            android:key="doze_small_icon_alpha"
            android:max="255"
            android:title="@string/doze_small_icon_alpha"
            app:min="1"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/doze_proximity">

        <SwitchPreference
            android:defaultValue="true"
            android:key="doze_proximity"
            android:summaryOff="@string/doze_not_pulse"
            android:summaryOn="@string/doze_will_pulse"
            android:title="@string/doze_proximity"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notes">

        <Preference android:summary="@string/warning_battery"/>

        <SwitchPreference
            android:key="debug"
            android:title="DEBUG"/>

    </PreferenceCategory>

</PreferenceScreen>